--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li class="navigation-item"><a href="#">Блог</a></li>
           </ul>
         </nav>
-        <button class="navigation-button">Записаться на сеанс</button>
+        <button class="navigation-button" type="button">Записаться на сеанс</button>
       </div>
     </header>
     <main class="main-inner">
@@ -232,7 +232,7 @@
                 <img src="/img/" alt="" class="make-appointment-img">
                 <p class="footer-location-text">Запись по договоренности</p>
               </div>
-              <button class="contacts-button">Записаться на сеанс</button>
+              <button class="contacts-button" type="button">Записаться на сеанс</button>
             </div>
           </div>
           <div class="contacts-two">
@@ -248,7 +248,7 @@
                 <img src="/img/" alt="" class="make-appointment-img">
                 <p class="footer-location-text">Запись по договоренности</p>
               </div>
-              <button class="contacts-button">Записаться на сеанс</button>
+              <button class="contacts-button" type="button">Записаться на сеанс</button>
             </div>
           </div>
         </div>
