--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="page-header">
       <div class="container">
         <a class="site-logo" href="/">
-          <img src="/img//img/logo.svg" width="60" height="51" alt="Логотип">
+          <img src="/img/logo.svg" width="60" height="51" alt="Логотип">
         </a>
         <nav class="site-navigation">
           <ul class="navigation-list">
@@ -35,14 +35,18 @@
       <section class="promo">
         <div class="container">
           <div class="promo-img" alt="Промо картинка">
+            <img src="/img/list-left.svg" alt="">
             <p class="promo-text">Укрепление здоровья</p>
+            <img src="/img/list-right.svg" alt="">
             <h1>Акватерапия<br>RitmStyle</h1>
           </div>
         </div>
       </section>
       <section class="sessions">
         <div class="container">
+          <img src="/img/list-left-blue.svg" alt="">
           <h2 class="sessions-title">Сеансы RitmStyle</h2>
+          <img src="/img/list-right-blue.svg" alt="">
           <div class="standatr">
             <p class="standatr-text">Стандартный RitmStyle</p>
           </div>
@@ -148,10 +152,10 @@
               Egestas molestie lobortis rhoncus, elit nulla nisl. Habitant
               tortor at tempor.
             </p>
-            <img src="/img/" alt="RitmStyle массаж ">
+            <img src="/img/about-massage.jpg" alt="RitmStyle массаж" width="526" ; height="365">
           </div>
           <div class="about-two">
-            <img src="/img/" alt="RitmStyle гидротерапия">
+            <img src="/img/about-hydrotherapy.jpg" alt="RitmStyle гидротерапия" width="526" ; height="365">
             <h3 class="about-two-title">RitmStyle гидротерапия</h3>
             <p class="about-two-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu
@@ -208,7 +212,7 @@
               </table>
             </div>
             <div class="price-img">
-              <img src="/img/" alt="Подарочный сертификат ">
+              <img src="/img/price.jpg" alt="Подарочный сертификат ">
               <p class="price-img-text">Подарочный сертификат</p>
             </div>
           </div>
@@ -218,7 +222,7 @@
     <footer class="page-footer">
       <div class="footer-contacts">
         <div class="container">
-          <img class="maps" src="/img/" alt="Карта расположения">
+          <img class="maps" src="/img/map-contact.jpg" alt="Карта расположения">
           <div class="contacts-one">
             <h3 class="footer-contacts-title">Бассейн WorkClass</h3>
             <div class="footer-location">
